fix education place background overlap

--- a/src/app/education/education.component.less
+++ b/src/app/education/education.component.less
@@ -12,9 +12,10 @@
 
   .place {
     font-size: 1.8em;
+    line-height: 1.2em;
     background-color: #1B1C1D;
     color: white;
-    padding: 0.1em 0.2em;
+    padding: 0em 0.2em;
     font-weight: bold;
   }
 
